# STM32N6VideoStreaming

./: .gitignore  README.md
PC_Site/: CMakeLists.txt  show_stream.c
STM32N6/: CMakeLists.txt  README.md  gcc-arm-none-eabi.cmake  mx-generated.cmake  program.sh  read_uart.py
STM32N6/Appli/: CMakeLists.txt  README.md  compare_h264.py  gcc-arm-none-eabi.cmake  program.sh
STM32N6/Appli/Core/Inc/: app_camerapipeline.h  app_config.h  cmw_camera_conf.h  main.h  stm32n6xx_hal_conf.h  venc.h
STM32N6/Appli/Core/Inc/hardware/: console.h  fuseprogramming.h  gpio.h  iac.h  iris.h  mpu.h  mylcd.h  sd_card.h  security.h  system_clock.h  timer.h
STM32N6/Appli/Core/Src/: app_camerapipeline.c  main.c  stm32n6xx_it.c
STM32N6/Appli/Core/Src/hardware/: console.c  fuseprogramming.c  gpio.c  iac.c  iris.c  lcd.c  mpu.c  sd_card.c  security.c  system_clock.c  timer.c  venc.c
STM32N6/Appli/Drivers/BSP/STM32N6570-DK/: stm32n6570_discovery_sd.c
STM32N6/Appli/Drivers/STM32N6xx_HAL_Driver/Src/: stm32n6xx_hal_sd.c  stm32n6xx_ll_sdmmc.c  stm32n6xx_ll_venc.c
STM32N6/Appli/Middlewares/VideoEncoder/inc/: basetype.h
STM32N6/Appli/Middlewares/VideoEncoder/source/h264/: H264Cabac.c  H264EncApi.c
STM32N6/Appli/Middlewares/VideoEncoder_EWL/: ewl_impl.c
STM32N6/Appli/Middlewares/stm32-mw-camera/: cmw_camera.c
STM32N6/Appli/Model/: network.c  stai_network.c
STM32N6/Appli/linker/: STM32N657xx.ld  STM32N657xx.txt
STM32N6/FSBL/: CMakeLists.txt  README.md  program.sh
STM32N6/FSBL/Core/Inc/: main.h  stm32n6xx_hal_conf.h
STM32N6/FSBL/Core/Src/: main.c  stm32n6xx_hal_msp.c
STM32N6/FSBL/Middlewares/ST/STM32_ExtMem_Manager/boot/: stm32_boot_xip.c
WiFiChip/: CMakeLists.txt  README.md  prj.conf
WiFiChip/boards/: ubx_evk_iris_w1.conf  ubx_evk_iris_w1.overlay
WiFiChip/modules/n6_communication/: CMakeLists.txt  Kconfig  n6_communication.c  n6_communication.h  udp_socket.c
WiFiChip/modules/n6_communication/zephyr/: module.yaml
WiFiChip/modules/udp_socket/: CMakeLists.txt  Kconfig  udp_socket.c  udp_socket.h
WiFiChip/modules/udp_socket/secret/: wifi_pswd.h
WiFiChip/modules/udp_socket/zephyr/: module.yaml
WiFiChip/src/communication/: tcp_socket.c  tcp_socket.h
